--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -249,8 +249,8 @@
     <Compile Include="Actors\Inbox.cs" />
     <Compile Include="Channels\ShuntChannel.cs" />
     <Compile Include="Channels\Visitors\TraceChannelVisitor.cs" />
-    <Compile Include="Routing\AlphaNodeSelector.cs" />
-    <Compile Include="Routing\ChannelNode.cs" />
+    <Compile Include="Routing\Internal\AlphaNodeSelector.cs" />
+    <Compile Include="Routing\Internal\ChannelNode.cs" />
     <Compile Include="Routing\Configuration\Internal\DynamicRoutingEngineConfigurator.cs" />
     <Compile Include="Routing\Configuration\ReceiveConfigurator.cs" />
     <Compile Include="Routing\Configuration\ReceiveConfiguratorImpl.cs" />
@@ -260,18 +260,18 @@
     <Compile Include="Routing\Configuration\WhenConfigurator.cs" />
     <Compile Include="Routing\Configuration\WhenConfiguratorImpl.cs" />
     <Compile Include="Routing\Configuration\WhenExtensions.cs" />
-    <Compile Include="Routing\ConsumerNode.cs" />
+    <Compile Include="Routing\Internal\ConsumerNode.cs" />
     <Compile Include="Routing\DynamicRoutingContext.cs" />
     <Compile Include="Routing\Internal\AlphaMemory.cs" />
     <Compile Include="Routing\Internal\JoinNode.2.cs" />
     <Compile Include="Routing\Internal\RightActivation.cs" />
     <Compile Include="Routing\Internal\Tuple.cs" />
     <Compile Include="Routing\Internal\TupleImpl.cs" />
-    <Compile Include="Routing\JoinNodeLocator.cs" />
+    <Compile Include="Routing\Internal\JoinNodeLocator.cs" />
     <Compile Include="Routing\ExtensionsToRoutingEngine.cs" />
     <Compile Include="Routing\Internal\Activation.cs" />
     <Compile Include="Routing\DynamicRoutingEngine.cs" />
-    <Compile Include="Routing\Internal\ActivationList.cs" />
+    <Compile Include="Routing\Internal\SuccessorList.cs" />
     <Compile Include="Routing\Internal\BetaMemory.cs" />
     <Compile Include="Routing\Internal\ConstantNode.cs" />
     <Compile Include="Routing\Internal\ExtensionsToList.cs" />
@@ -282,7 +282,7 @@
     <Compile Include="Routing\Internal\RoutingContext.cs" />
     <Compile Include="Routing\Internal\TypeRouter.cs" />
     <Compile Include="Routing\RoutingEngine.cs" />
-    <Compile Include="Routing\SelectiveConsumerNode.cs" />
+    <Compile Include="Routing\Internal\SelectiveConsumerNode.cs" />
     <Compile Include="Routing\Visualizers\AbstractRoutingEngineVisitor.cs" />
     <Compile Include="Routing\Visualizers\RoutingEngineTextVisualizer.cs" />
     <Compile Include="Schedulers\ExtensionsToScheduler.cs" />
