--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -114,17 +114,18 @@
     <Compile Include="Actors\ActorProvider.cs" />
     <Compile Include="Actors\ActorRegistry.cs" />
     <Compile Include="Actors\ActorRepository.cs" />
-    <Compile Include="Actors\Internal\PublicMethodConvention.cs" />
-    <Compile Include="Actors\Internal\PropertyChannelConvention.cs" />
-    <Compile Include="Actors\Internal\PublicMethodsConvention.cs" />
-    <Compile Include="Actors\Internal\PropertyChannelsConvention.cs" />
+    <Compile Include="Actors\Configuration\Internal\PublicMethodConvention.cs" />
+    <Compile Include="Actors\Configuration\Internal\PropertyChannelConvention.cs" />
+    <Compile Include="Actors\Configuration\Internal\PublicMethodsConvention.cs" />
+    <Compile Include="Actors\Configuration\Internal\PropertyChannelsConvention.cs" />
     <Compile Include="Actors\ExtensionsForActorConventions.cs" />
     <Compile Include="Actors\ExtensionsToActorInstance.cs" />
     <Compile Include="Actors\AnonymousActor.cs" />
     <Compile Include="Actors\Internal\AnonymousActorFactory.cs" />
     <Compile Include="Actors\Internal\PendingReceiveList.cs" />
-    <Compile Include="Actors\Internal\RepeatLoopImpl.cs" />
-    <Compile Include="Actors\RepeatLoop.cs" />
+    <Compile Include="Actors\Internal\ReceiveLoopImpl.cs" />
+    <Compile Include="Actors\ReceiveLoop.cs" />
+    <Compile Include="Actors\ReceiveLoopExtensions.cs" />
     <Compile Include="Channels\Internal\TypeConverters\AssignableTypeConverterFactory.cs" />
     <Compile Include="Channels\Internal\HeaderTypeAdapter.cs" />
     <Compile Include="Channels\Internal\HeaderTypeConverterFactory.cs" />
@@ -138,6 +139,7 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="Actors\Internal\ActorChannelProvider.cs" />
     <Compile Include="Actors\Internal\ActorFactoryImpl.cs" />
+    <Compile Include="Fibers\Internal\RunFiber.cs" />
     <Compile Include="Fibers\Internal\ShutdownFiberOnDispose.cs" />
     <Compile Include="Fibers\Internal\StopFiberOnDispose.cs" />
     <Compile Include="Schedulers\SchedulerException.cs" />
@@ -244,8 +246,6 @@
     <Compile Include="Channels\MessageConverter.cs" />
     <Compile Include="Configuration\Channels\Internal\DisconnectChannelVisitor.cs" />
     <Compile Include="Channels\SelectiveConsumer.cs" />
-    <Compile Include="Actors\Internal\BufferedInbox.cs" />
-    <Compile Include="Actors\Internal\Inbox.1.cs" />
     <Compile Include="Actors\Inbox.cs" />
     <Compile Include="Channels\ShuntChannel.cs" />
     <Compile Include="Channels\Visitors\TraceChannelVisitor.cs" />
