New workflow engine for Stact, based on Magnum StateMachine

--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -356,6 +356,49 @@
     <Compile Include="StateMachine\ChannelConfiguration\StateMachineEventInspector.cs" />
     <Compile Include="StateMachine\ChannelConfiguration\StateMachineEventInspectorResult.cs" />
     <Compile Include="StateMachine\StateMachineBinding.cs" />
+    <Compile Include="Workflow\Internal\SimpleStateEventBuilder.cs" />
+    <Compile Include="Workflow\Internal\CurrentStateAccessorImpl.cs" />
+    <Compile Include="Workflow\Internal\EventCaller.cs" />
+    <Compile Include="Workflow\Internal\StateAccessor.cs" />
+    <Compile Include="Workflow\Internal\StateEventList.cs" />
+    <Compile Include="Workflow\Internal\TransitionStateEvent.cs" />
+    <Compile Include="Workflow\Internal\ExpressionUtil.cs" />
+    <Compile Include="Workflow\Configuration\MessageStateEventConfigurator.cs" />
+    <Compile Include="Workflow\Configuration\StateBuilderConfigurator.cs" />
+    <Compile Include="Workflow\Configuration\StateConfigurator.cs" />
+    <Compile Include="Workflow\Configuration\StateConfiguratorImpl.cs" />
+    <Compile Include="Workflow\Internal\StateBuilderImpl.cs" />
+    <Compile Include="Workflow\Internal\StateEventBuilder.cs" />
+    <Compile Include="Workflow\Configuration\StateEventBuilderConfigurator.cs" />
+    <Compile Include="Workflow\Configuration\StateEventConfigurator.cs" />
+    <Compile Include="Workflow\Configuration\SimpleStateEventConfigurator.cs" />
+    <Compile Include="Workflow\Configuration\StateMachineBuilderConfigurator.cs" />
+    <Compile Include="Workflow\Internal\StateMachineBuilder.cs" />
+    <Compile Include="Workflow\Internal\StateMachineBuilderImpl.cs" />
+    <Compile Include="Workflow\Configuration\StateMachineConfigurator.cs" />
+    <Compile Include="Workflow\Configuration\StateMachineWorkflowConfiguratorException.cs" />
+    <Compile Include="Workflow\Configuration\StateMachineConfiguratorImpl.cs" />
+    <Compile Include="Workflow\Internal\StateBuilder.cs" />
+    <Compile Include="Workflow\Internal\StateMachineWorkflowImpl.cs" />
+    <Compile Include="Workflow\Configuration\TransitionStateEventConfigurator.cs" />
+    <Compile Include="Workflow\Internal\MessageEvent.cs" />
+    <Compile Include="Workflow\Event.cs" />
+    <Compile Include="Workflow\Internal\SimpleEvent.cs" />
+    <Compile Include="Workflow\State.cs" />
+    <Compile Include="Workflow\StateConfiguratorExtensions.cs" />
+    <Compile Include="Workflow\Internal\StateEvent.cs" />
+    <Compile Include="Workflow\StateEventConfiguratorExtensions.cs" />
+    <Compile Include="Workflow\Internal\StateEventImpl.cs" />
+    <Compile Include="Workflow\Internal\StateMachineVisitor.cs" />
+    <Compile Include="Workflow\StateMachineWorkflow.cs" />
+    <Compile Include="Workflow\StateMachineConfiguratorExtensions.cs" />
+    <Compile Include="Workflow\StateMachineWorkflowException.cs" />
+    <Compile Include="Workflow\Internal\AcceptStateMachineVisitor.cs" />
+    <Compile Include="Workflow\TraceStateMachineVisitor.cs" />
+    <Compile Include="Workflow\Internal\WorkflowInstance.cs" />
+    <Compile Include="Workflow\Internal\StateMachineState.cs" />
+    <Compile Include="Workflow\WorkflowInstance.cs" />
+    <Compile Include="Workflow\WorkflowInstanceExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
