--- a/src/Stact.Specs/Stact.Specs.csproj
+++ b/src/Stact.Specs/Stact.Specs.csproj
@@ -169,6 +169,7 @@
     <Compile Include="StateMachine\ChannelConfigurator_Specs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usage\PausibleAgent_Specs.cs" />
+    <Compile Include="Workflow\Action_Specs.cs" />
     <Compile Include="Workflow\Creating_Specs.cs" />
     <Compile Include="Workflow\Transition_Specs.cs" />
   </ItemGroup>
