Renamed/Refactored to improve comprehension

--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -356,27 +356,34 @@
     <Compile Include="StateMachine\ChannelConfiguration\StateMachineEventInspector.cs" />
     <Compile Include="StateMachine\ChannelConfiguration\StateMachineEventInspectorResult.cs" />
     <Compile Include="StateMachine\StateMachineBinding.cs" />
-    <Compile Include="Workflow\Configuration\DelegateStateEventConfigurator.cs" />
-    <Compile Include="Workflow\Configuration\MethodStateEventConfigurator.cs" />
-    <Compile Include="Workflow\Internal\DelegateStateEvent.cs" />
-    <Compile Include="Workflow\Internal\MessageStateEventBuilder.cs" />
-    <Compile Include="Workflow\Internal\MethodStateEvent.cs" />
-    <Compile Include="Workflow\Internal\SimpleStateEventBuilder.cs" />
-    <Compile Include="Workflow\Internal\CurrentStateAccessorImpl.cs" />
-    <Compile Include="Workflow\Internal\EventCaller.cs" />
+    <Compile Include="Workflow\Configuration\MethodBodyConfigurator.cs" />
+    <Compile Include="Workflow\Configuration\InstanceBodyDelegateEventConfigurator.cs" />
+    <Compile Include="Workflow\Configuration\InstanceDelegateEventActionConfigurator.cs" />
+    <Compile Include="Workflow\Configuration\MethodConfigurator.cs" />
+    <Compile Include="Workflow\Internal\ActivityBase.cs" />
+    <Compile Include="Workflow\Internal\DelegateActivity.cs" />
+    <Compile Include="Workflow\Internal\DelegateInstanceBodyActivity.cs" />
+    <Compile Include="Workflow\Internal\DelegateInstanceActivity.cs" />
+    <Compile Include="Workflow\Internal\MessageActivityBuilder.cs" />
+    <Compile Include="Workflow\Internal\FindMethodCallVisitor.cs" />
+    <Compile Include="Workflow\Internal\MethodBodyActivity.cs" />
+    <Compile Include="Workflow\Internal\MethodActivity.cs" />
+    <Compile Include="Workflow\Internal\SimpleActivityBuilder.cs" />
+    <Compile Include="Workflow\Internal\CurrentStateAccessor.cs" />
+    <Compile Include="Workflow\Internal\EventRaiser.cs" />
     <Compile Include="Workflow\Internal\StateAccessor.cs" />
-    <Compile Include="Workflow\Internal\StateEventList.cs" />
-    <Compile Include="Workflow\Internal\TransitionStateEvent.cs" />
+    <Compile Include="Workflow\Internal\ActivityList.cs" />
+    <Compile Include="Workflow\Internal\TransitionActivity.cs" />
     <Compile Include="Workflow\Internal\ExpressionUtil.cs" />
-    <Compile Include="Workflow\Configuration\MessageStateEventConfigurator.cs" />
+    <Compile Include="Workflow\Configuration\MessageActivityConfigurator.cs" />
     <Compile Include="Workflow\Configuration\StateBuilderConfigurator.cs" />
     <Compile Include="Workflow\Configuration\StateConfigurator.cs" />
     <Compile Include="Workflow\Configuration\StateConfiguratorImpl.cs" />
     <Compile Include="Workflow\Internal\StateBuilderImpl.cs" />
-    <Compile Include="Workflow\Internal\StateEventBuilder.cs" />
-    <Compile Include="Workflow\Configuration\StateEventBuilderConfigurator.cs" />
-    <Compile Include="Workflow\Configuration\StateEventConfigurator.cs" />
-    <Compile Include="Workflow\Configuration\SimpleStateEventConfigurator.cs" />
+    <Compile Include="Workflow\Internal\ActivityBuilder.cs" />
+    <Compile Include="Workflow\Configuration\ActivityBuilderConfigurator.cs" />
+    <Compile Include="Workflow\Configuration\ActivityConfigurator.cs" />
+    <Compile Include="Workflow\Configuration\SimpleActivityConfigurator.cs" />
     <Compile Include="Workflow\Configuration\StateMachineBuilderConfigurator.cs" />
     <Compile Include="Workflow\Internal\StateMachineBuilder.cs" />
     <Compile Include="Workflow\Internal\StateMachineBuilderImpl.cs" />
@@ -385,13 +392,12 @@
     <Compile Include="Workflow\Configuration\StateMachineConfiguratorImpl.cs" />
     <Compile Include="Workflow\Internal\StateBuilder.cs" />
     <Compile Include="Workflow\Internal\StateMachineWorkflowImpl.cs" />
-    <Compile Include="Workflow\Configuration\TransitionStateEventConfigurator.cs" />
+    <Compile Include="Workflow\Configuration\TransitionConfigurator.cs" />
     <Compile Include="Workflow\Internal\MessageEvent.cs" />
     <Compile Include="Workflow\Event.cs" />
     <Compile Include="Workflow\Internal\SimpleEvent.cs" />
     <Compile Include="Workflow\State.cs" />
-    <Compile Include="Workflow\Internal\StateEvent.cs" />
-    <Compile Include="Workflow\Internal\StateEventImpl.cs" />
+    <Compile Include="Workflow\Internal\Activity.cs" />
     <Compile Include="Workflow\Internal\StateMachineVisitor.cs" />
     <Compile Include="Workflow\StateMachineWorkflow.cs" />
     <Compile Include="Workflow\StateMachineConfiguratorExtensions.cs" />
