More movement/arrangement

--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -133,8 +133,8 @@
     <Compile Include="Channels\Internal\TypeConverters\MessageTypeConverterFactory.cs" />
     <Compile Include="Channels\Internal\TypeConverters\MessageUpConverterFactory.cs" />
     <Compile Include="Channels\Internal\TypeConverters\RequestUpConverterFactory.cs" />
-    <Compile Include="Configuration\Channels\ExtensionsForFiberConfiguration.cs" />
-    <Compile Include="Configuration\Channels\Internal\SchedulerFactoryConfigurator.cs" />
+    <Compile Include="Channels\Configuration\ExtensionsForFiberConfiguration.cs" />
+    <Compile Include="Channels\Configuration\Internal\SchedulerFactoryConfigurator.cs" />
     <Compile Include="Continuation.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Actors\Internal\ActorChannelProvider.cs" />
@@ -156,18 +156,18 @@
     <Compile Include="Messages\Kill.cs" />
     <Compile Include="Actors\PendingReceive.cs" />
     <Compile Include="Channels\ChannelProviderFactory.cs" />
-    <Compile Include="Configuration\Channels\ExtensionsForDistributedChannels.cs" />
-    <Compile Include="Configuration\Channels\ExtensionsForPropertyChannel.cs" />
-    <Compile Include="Configuration\Channels\ExtensionsForSynchronizedChannels.cs" />
-    <Compile Include="Configuration\Channels\ExtensionsForWcfChannels.cs" />
-    <Compile Include="Configuration\Channels\Internal\ChannelConnectionBase.cs" />
-    <Compile Include="Configuration\Channels\Internal\ChannelConfiguratorConnection.cs" />
-    <Compile Include="Configuration\Channels\Internal\ChannelConfiguratorConnectionImpl.cs" />
-    <Compile Include="Configuration\Channels\Internal\ChannelConnectionConfiguratorImpl.cs" />
-    <Compile Include="Configuration\Channels\Internal\DistributedInstanceChannelConfiguratorImpl.cs" />
-    <Compile Include="Configuration\Channels\Internal\DistributedInstanceChannelProviderConfigurator.cs" />
-    <Compile Include="Configuration\Channels\Internal\PropertyChannelConnectionConfigurator.cs" />
-    <Compile Include="Configuration\Channels\Internal\PropertyChannelConnectionConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\ExtensionsForDistributedChannels.cs" />
+    <Compile Include="Channels\Configuration\ExtensionsForPropertyChannel.cs" />
+    <Compile Include="Channels\Configuration\ExtensionsForSynchronizedChannels.cs" />
+    <Compile Include="Channels\Configuration\ExtensionsForWcfChannels.cs" />
+    <Compile Include="Channels\Configuration\Internal\ChannelConnectionBase.cs" />
+    <Compile Include="Channels\Configuration\Internal\ChannelConfiguratorConnection.cs" />
+    <Compile Include="Channels\Configuration\Internal\ChannelConfiguratorConnectionImpl.cs" />
+    <Compile Include="Channels\Configuration\Internal\ChannelConnectionConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\Internal\DistributedInstanceChannelConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\Internal\DistributedInstanceChannelProviderConfigurator.cs" />
+    <Compile Include="Channels\Configuration\Internal\PropertyChannelConnectionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\Internal\PropertyChannelConnectionConfiguratorImpl.cs" />
     <Compile Include="ExtensionsToInbox.cs" />
     <Compile Include="Headers\ExtensionsToHeaders.cs" />
     <Compile Include="Headers\Message.cs" />
@@ -180,45 +180,45 @@
     <Compile Include="Actors\Internal\SentRequestImpl.cs" />
     <Compile Include="Channels\TypedChannelAdapter.cs" />
     <Compile Include="Actors\Internal\ActorInbox.cs" />
-    <Compile Include="Configuration\Fibers\FiberFactoryConfigurator.cs" />
-    <Compile Include="Configuration\Channels\Internal\InstanceChannelProviderConfiguratorImpl.cs" />
-    <Compile Include="Configuration\Channels\Internal\SynchronizedChannelConnectionConfigurator.cs" />
-    <Compile Include="Configuration\Channels\Internal\SynchronizedChannelConnectionConfiguratorImpl.cs" />
-    <Compile Include="Configuration\Channels\Internal\WcfChannelConnectionConfigurator.cs" />
-    <Compile Include="Configuration\Channels\Internal\WcfChannelConnectionConfiguratorImpl.cs" />
-    <Compile Include="Configuration\Channels\Internal\CreateChannelConnection.cs" />
-    <Compile Include="Configuration\Channels\Internal\WcfChannelHostConnectionConfigurator.cs" />
-    <Compile Include="Configuration\Channels\Internal\WcfChannelHostConnectionConfiguratorImpl.cs" />
+    <Compile Include="Fibers\Configuration\FiberFactoryConfigurator.cs" />
+    <Compile Include="Channels\Configuration\Internal\InstanceChannelProviderConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\Internal\SynchronizedChannelConnectionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\Internal\SynchronizedChannelConnectionConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\Internal\WcfChannelConnectionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\Internal\WcfChannelConnectionConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\Internal\CreateChannelConnection.cs" />
+    <Compile Include="Channels\Configuration\Internal\WcfChannelHostConnectionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\Internal\WcfChannelHostConnectionConfiguratorImpl.cs" />
     <Compile Include="Channels\DelegateInstanceProvider.cs" />
     <Compile Include="Channels\InstanceProvider.cs" />
     <Compile Include="Channels\Internal\AsyncResult.cs" />
     <Compile Include="Channels\ChannelConnection.cs" />
     <Compile Include="Channels\ChannelFactory.cs" />
-    <Compile Include="Configuration\Channels\ChannelConfigurationException.cs" />
-    <Compile Include="Configuration\Channels\ChannelConnectionConfigurator.cs" />
-    <Compile Include="Configuration\Channels\ExtensionsForLastChannels.cs" />
-    <Compile Include="Configuration\Channels\Internal\ChannelConfiguratorImpl.cs" />
-    <Compile Include="Configuration\Channels\Configurator.cs" />
-    <Compile Include="Configuration\Channels\Internal\ConsumerChannelConfigurator.cs" />
-    <Compile Include="Configuration\Channels\Internal\ConsumerChannelConfiguratorImpl.cs" />
-    <Compile Include="Configuration\Channels\Internal\DistinctChannelConfigurator.cs" />
-    <Compile Include="Configuration\Channels\Internal\DistinctChannelConfiguratorImpl.cs" />
-    <Compile Include="Configuration\Channels\ExtensionsForConsumerChannel.cs" />
-    <Compile Include="Configuration\Channels\ExtensionsForDistinctChannels.cs" />
-    <Compile Include="Configuration\Channels\ExtensionsForFilterChannel.cs" />
-    <Compile Include="Configuration\Channels\ExtensionsForInstanceChannel.cs" />
-    <Compile Include="Configuration\Channels\ExtensionsForIntervalChannels.cs" />
-    <Compile Include="Configuration\Channels\ExtensionsForSelectiveConsumerChannel.cs" />
-    <Compile Include="Configuration\Channels\ExtensionsForAddConsumer.cs" />
-    <Compile Include="Configuration\Fibers\FiberFactoryConfiguratorImpl.cs" />
-    <Compile Include="Configuration\Channels\Internal\FilterChannelConfigurator.cs" />
-    <Compile Include="Configuration\Channels\Internal\FilterChannelConfiguratorImpl.cs" />
-    <Compile Include="Configuration\Channels\Internal\InstanceChannelConfiguratorImpl.cs" />
-    <Compile Include="Configuration\Channels\Internal\IntervalChannelConfigurator.cs" />
-    <Compile Include="Configuration\Channels\Internal\SchedulerFactoryConfiguratorImpl.cs" />
-    <Compile Include="Configuration\Channels\Internal\LastChannelConfigurator.cs" />
-    <Compile Include="Configuration\Channels\Internal\LastChannelConfiguratorImpl.cs" />
-    <Compile Include="Configuration\Channels\Internal\SelectiveConsumerChannelConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\ChannelConfigurationException.cs" />
+    <Compile Include="Channels\Configuration\ChannelConnectionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\ExtensionsForLastChannels.cs" />
+    <Compile Include="Channels\Configuration\Internal\ChannelConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\Configurator.cs" />
+    <Compile Include="Channels\Configuration\Internal\ConsumerChannelConfigurator.cs" />
+    <Compile Include="Channels\Configuration\Internal\ConsumerChannelConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\Internal\DistinctChannelConfigurator.cs" />
+    <Compile Include="Channels\Configuration\Internal\DistinctChannelConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\ExtensionsForConsumerChannel.cs" />
+    <Compile Include="Channels\Configuration\ExtensionsForDistinctChannels.cs" />
+    <Compile Include="Channels\Configuration\ExtensionsForFilterChannel.cs" />
+    <Compile Include="Channels\Configuration\ExtensionsForInstanceChannel.cs" />
+    <Compile Include="Channels\Configuration\ExtensionsForIntervalChannels.cs" />
+    <Compile Include="Channels\Configuration\ExtensionsForSelectiveConsumerChannel.cs" />
+    <Compile Include="Channels\Configuration\ExtensionsForAddConsumer.cs" />
+    <Compile Include="Fibers\Configuration\FiberFactoryConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\Internal\FilterChannelConfigurator.cs" />
+    <Compile Include="Channels\Configuration\Internal\FilterChannelConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\Internal\InstanceChannelConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\Internal\IntervalChannelConfigurator.cs" />
+    <Compile Include="Channels\Configuration\Internal\SchedulerFactoryConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\Internal\LastChannelConfigurator.cs" />
+    <Compile Include="Channels\Configuration\Internal\LastChannelConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\Internal\SelectiveConsumerChannelConfiguratorImpl.cs" />
     <Compile Include="Channels\FutureChannel.cs" />
     <Compile Include="Channels\InstanceChannelProvider.cs" />
     <Compile Include="Channels\SelectiveConsumerChannel.cs" />
@@ -227,14 +227,14 @@
     <Compile Include="Channels\Visitors\GraphChannelVisitor.cs" />
     <Compile Include="Channels\WcfChannelHost.cs" />
     <Compile Include="Channels\WcfChannelProxy.cs" />
-    <Compile Include="Configuration\Channels\Internal\ConnectChannelVisitor.cs" />
-    <Compile Include="Configuration\Channels\Internal\InstanceChannelConfigurator.cs" />
-    <Compile Include="Configuration\Channels\Internal\IntervalChannelConfiguratorImpl.cs" />
-    <Compile Include="Configuration\Channels\ConnectionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\Internal\ConnectChannelVisitor.cs" />
+    <Compile Include="Channels\Configuration\Internal\InstanceChannelConfigurator.cs" />
+    <Compile Include="Channels\Configuration\Internal\IntervalChannelConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\ConnectionConfigurator.cs" />
     <Compile Include="Channels\ChannelAdapter.cs" />
-    <Compile Include="Configuration\Channels\Internal\ConnectionConfiguratorImpl.cs" />
-    <Compile Include="Configuration\Channels\Internal\ChannelConnectionImpl.cs" />
-    <Compile Include="Configuration\Channels\Internal\ChannelConfigurator.cs" />
+    <Compile Include="Channels\Configuration\Internal\ConnectionConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\Internal\ChannelConnectionImpl.cs" />
+    <Compile Include="Channels\Configuration\Internal\ChannelConfigurator.cs" />
     <Compile Include="Channels\DeserializeChannel.cs" />
     <Compile Include="Channels\DeserializeMessageEnvelopeChannel.cs" />
     <Compile Include="Channels\Visitors\FlattenChannelVisitor.cs" />
@@ -244,7 +244,7 @@
     <Compile Include="Channels\SerializeChannel.cs" />
     <Compile Include="Channels\ExtensionsForChannels.cs" />
     <Compile Include="Channels\MessageConverter.cs" />
-    <Compile Include="Configuration\Channels\Internal\DisconnectChannelVisitor.cs" />
+    <Compile Include="Channels\Configuration\Internal\DisconnectChannelVisitor.cs" />
     <Compile Include="Channels\SelectiveConsumer.cs" />
     <Compile Include="Actors\Inbox.cs" />
     <Compile Include="Channels\ShuntChannel.cs" />
@@ -288,9 +288,9 @@
     <Compile Include="Schedulers\ExtensionsToScheduler.cs" />
     <Compile Include="Channels\UntypedChannel.cs" />
     <Compile Include="Channels\Internal\WcfMessageEnvelope.cs" />
-    <Compile Include="Configuration\Fibers\FiberConfigurationException.cs" />
-    <Compile Include="Configuration\Fibers\FiberProviderConfigurator.cs" />
-    <Compile Include="Configuration\Fibers\FiberProviderConfiguratorImpl.cs" />
+    <Compile Include="Fibers\Configuration\FiberConfigurationException.cs" />
+    <Compile Include="Fibers\Configuration\FiberProviderConfigurator.cs" />
+    <Compile Include="Fibers\Configuration\FiberProviderConfiguratorImpl.cs" />
     <Compile Include="Internal\DisposeCallback.cs" />
     <Compile Include="Fibers\ExtensionsToFiber.cs" />
     <Compile Include="Fibers\Internal\KeyedFiberProvider.cs" />
@@ -357,8 +357,8 @@
     <Compile Include="StateMachine\ChannelConfiguration\StateMachineEventInspectorResult.cs" />
     <Compile Include="StateMachine\StateMachineBinding.cs" />
     <Compile Include="Workflow\Configuration\MethodBodyConfigurator.cs" />
-    <Compile Include="Workflow\Configuration\InstanceBodyDelegateEventConfigurator.cs" />
-    <Compile Include="Workflow\Configuration\InstanceDelegateEventActionConfigurator.cs" />
+    <Compile Include="Workflow\Configuration\DelegateInstanceBodyConfigurator.cs" />
+    <Compile Include="Workflow\Configuration\DelegateInstanceConfigurator.cs" />
     <Compile Include="Workflow\Configuration\MethodConfigurator.cs" />
     <Compile Include="Workflow\Internal\ActivityBase.cs" />
     <Compile Include="Workflow\Internal\DelegateActivity.cs" />
@@ -388,7 +388,7 @@
     <Compile Include="Workflow\Internal\StateMachineBuilder.cs" />
     <Compile Include="Workflow\Internal\StateMachineBuilderImpl.cs" />
     <Compile Include="Workflow\Configuration\StateMachineConfigurator.cs" />
-    <Compile Include="Workflow\Configuration\StateMachineWorkflowConfiguratorException.cs" />
+    <Compile Include="Workflow\Configuration\StateMachineConfigurationException.cs" />
     <Compile Include="Workflow\Configuration\StateMachineConfiguratorImpl.cs" />
     <Compile Include="Workflow\Internal\StateBuilder.cs" />
     <Compile Include="Workflow\Internal\StateMachineWorkflowImpl.cs" />
