--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -126,6 +126,8 @@
     <Compile Include="Actors\Internal\ReceiveLoopImpl.cs" />
     <Compile Include="Actors\ReceiveLoop.cs" />
     <Compile Include="Actors\ReceiveLoopExtensions.cs" />
+    <Compile Include="Channels\Configuration\Internal\TypedChannelConnectionBuilder.cs" />
+    <Compile Include="Channels\Configuration\Internal\TypedConnectionBuilderConfigurator.cs" />
     <Compile Include="Channels\Internal\TypeConverters\AssignableTypeConverterFactory.cs" />
     <Compile Include="Channels\Internal\HeaderTypeAdapter.cs" />
     <Compile Include="Channels\Internal\HeaderTypeConverterFactory.cs" />
@@ -161,9 +163,9 @@
     <Compile Include="Channels\Configuration\ExtensionsForSynchronizedChannels.cs" />
     <Compile Include="Channels\Configuration\ExtensionsForWcfChannels.cs" />
     <Compile Include="Channels\Configuration\Internal\ChannelConnectionBase.cs" />
-    <Compile Include="Channels\Configuration\Internal\ChannelConfiguratorConnection.cs" />
-    <Compile Include="Channels\Configuration\Internal\ChannelConfiguratorConnectionImpl.cs" />
-    <Compile Include="Channels\Configuration\Internal\ChannelConnectionConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\Internal\ConnectionBuilder.cs" />
+    <Compile Include="Channels\Configuration\Internal\UntypedChannnelConnectionBuilder.cs" />
+    <Compile Include="Channels\Configuration\Internal\ChannelConfiguratorImpl.cs" />
     <Compile Include="Channels\Configuration\Internal\DistributedInstanceChannelConfiguratorImpl.cs" />
     <Compile Include="Channels\Configuration\Internal\DistributedInstanceChannelProviderConfigurator.cs" />
     <Compile Include="Channels\Configuration\Internal\PropertyChannelConnectionConfigurator.cs" />
@@ -182,22 +184,22 @@
     <Compile Include="Actors\Internal\ActorInbox.cs" />
     <Compile Include="Fibers\Configuration\FiberFactoryConfigurator.cs" />
     <Compile Include="Channels\Configuration\Internal\InstanceChannelProviderConfiguratorImpl.cs" />
-    <Compile Include="Channels\Configuration\Internal\SynchronizedChannelConnectionConfigurator.cs" />
-    <Compile Include="Channels\Configuration\Internal\SynchronizedChannelConnectionConfiguratorImpl.cs" />
-    <Compile Include="Channels\Configuration\Internal\WcfChannelConnectionConfigurator.cs" />
-    <Compile Include="Channels\Configuration\Internal\WcfChannelConnectionConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\Internal\SynchronizedChannelConfigurator.cs" />
+    <Compile Include="Channels\Configuration\Internal\SynchronizedChannelConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\Internal\WcfConnectionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\Internal\WcfConnectionConfiguratorImpl.cs" />
     <Compile Include="Channels\Configuration\Internal\CreateChannelConnection.cs" />
-    <Compile Include="Channels\Configuration\Internal\WcfChannelHostConnectionConfigurator.cs" />
-    <Compile Include="Channels\Configuration\Internal\WcfChannelHostConnectionConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\Internal\WcfHostConnectionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\Internal\WcfHostConnectionConfiguratorImpl.cs" />
     <Compile Include="Channels\DelegateInstanceProvider.cs" />
     <Compile Include="Channels\InstanceProvider.cs" />
     <Compile Include="Channels\Internal\AsyncResult.cs" />
     <Compile Include="Channels\ChannelConnection.cs" />
     <Compile Include="Channels\ChannelFactory.cs" />
     <Compile Include="Channels\Configuration\ChannelConfigurationException.cs" />
-    <Compile Include="Channels\Configuration\ChannelConnectionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\ChannelConfigurator.cs" />
     <Compile Include="Channels\Configuration\ExtensionsForLastChannels.cs" />
-    <Compile Include="Channels\Configuration\Internal\ChannelConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\Internal\UntypedConnectionBuilderConfigurator.cs" />
     <Compile Include="Channels\Configuration\Configurator.cs" />
     <Compile Include="Channels\Configuration\Internal\ConsumerChannelConfigurator.cs" />
     <Compile Include="Channels\Configuration\Internal\ConsumerChannelConfiguratorImpl.cs" />
@@ -233,8 +235,8 @@
     <Compile Include="Channels\Configuration\ConnectionConfigurator.cs" />
     <Compile Include="Channels\ChannelAdapter.cs" />
     <Compile Include="Channels\Configuration\Internal\ConnectionConfiguratorImpl.cs" />
-    <Compile Include="Channels\Configuration\Internal\ChannelConnectionImpl.cs" />
-    <Compile Include="Channels\Configuration\Internal\ChannelConfigurator.cs" />
+    <Compile Include="Channels\Configuration\Internal\UntypedChannelConnection.cs" />
+    <Compile Include="Channels\Configuration\Internal\ConnectionBuilderConfigurator.cs" />
     <Compile Include="Channels\DeserializeChannel.cs" />
     <Compile Include="Channels\DeserializeMessageEnvelopeChannel.cs" />
     <Compile Include="Channels\Visitors\FlattenChannelVisitor.cs" />
